objects/Store__c.object
<CustomObject>
    <description>List of OD Stores for reps to access via lookups on Leads/Opps</description>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Pro_Name__c</fullName>
        <formula>IF( Owner:User.Business_Pro_User__c , Owner:User.FirstName &amp; &apos; &apos; &amp;  Owner:User.LastName    , &apos;&apos;)</formula>
        <label>Business Pro Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPD_Sales_Rep_ID__c</fullName>
        <label>CPD Sales Rep ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Number__c</fullName>
        <formula>text(value( ID__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <externalId>true</externalId>
        <label>ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MyStore__c</fullName>
        <formula>IF( Store_Sales_Manager__c== left($User.Id,15), &apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MyStore</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Stores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Store</label>
    <nameField>
        <label>Store Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>